--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /* your code */
+*{
+	/* margin:50px; */
+	/* padding:50px; */
+	
+	text-align:center;
+}
+th{
+	border:1px solid black;
+	background-color: aliceblue;
+	
+
+}
+table{
+	border-collapse:collapse;
+	/* border:1px solid black; */
+}
+#id{
+	/* border:1px solid black; */
+	background-color:orange;
+	
+}
+tr{
+	/* border:1px solid black; */
+	background-color:lightyellow;
+}
+
+td{
+	border:1px solid black;
+}
+
+
+
+
